--- a/app/views/pages/main.ejs
+++ b/app/views/pages/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ultimate Google SERP Tracker | 100% Accurate Google SERP Results</title>
+    <title>SerpRankChecker.com | Free Google SERP | Google SERP Tool</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fontawesome/4.0.3/css/font-awesome.min.css" />
 <script type="text/javascript" src="//cdn.jsdelivr.net/knockout/3.0.0beta/knockout.js"></script>
@@ -21,8 +21,8 @@
   </script>
   </head>
   <body>
-    <h1>Ultimate Google SERP Tracker</h1>
-    <p>100% Accurate Google SERP Results</p>
+    <h1>Google SERP Rank Checker</h1>
+    <h3>100%% Accurate SERP results</h3>
     
 
     <div class="tagContainer">
@@ -35,8 +35,13 @@
     	<i class="fa fa-cog fa-spin loader"></i>
 Submit
     </div>
+    <div style="display:block; width:100%; float:left; clear:bothl">
     <input name = "keywords" class="tags" type="text"/>
-  
+    </div>
+    <div style="display:block; width:100%; float:left; clear:bothl">
+  <i><small>More keywords you use, longer it takes to obtain results</small></i>
+</div>
+
 </form>
 <form class="form-wrapper">
   <h2>Results</h2>
