--- a/app/views/pages/main.ejs
+++ b/app/views/pages/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SerpRankChecker.com | Free Google SERP | Google SERP Tool</title>
+    <title>SerpRankChecker.com | Free Google SERP checker | Google SERP Tool</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fontawesome/4.0.3/css/font-awesome.min.css" />
 <script type="text/javascript" src="//cdn.jsdelivr.net/knockout/3.0.0beta/knockout.js"></script>
@@ -22,7 +22,7 @@
   </head>
   <body>
     <h1>Google SERP Rank Checker</h1>
-    <h3>100%% Accurate SERP results</h3>
+    <h3>Search engine rank position checker</h3>
     
 
     <div class="tagContainer">
